fix(tplug-erp): mantem compatibilidade da leitura de tentativas